tests/fixtures/invalid/none_lshift_list.py
# Cannot left shift None and List[int]
x: None = None << [1, 2, 3]
